--- a/starter-code/apple-pie-starter-code/css/main.css
+++ b/starter-code/apple-pie-starter-code/css/main.css
@@ -5,11 +5,15 @@
 
 body {
     font-family: ‘Montserrat’, sans-serif;
+    line-height: 1.5;
 }
 
 header {
     background-image: url("../images/apple-pie.jpg");
     height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
@@ -23,7 +27,48 @@ h1 {
     padding: 100px;
 }
 
-#recipe_servings {
+#recipe_servings, #recipe_ingredients {
     font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid grey;
 }
 
+#recipe_servings p {
+    font-size: 25px;
+    text-align: justify;
+    padding-bottom: 20px;
+}
+
+#recipe_servings img, #recipe_ingredients img {
+    width: 500px;
+    display: flex;
+    align-self: center;
+    padding: 20px 0;
+}
+
+#recipe_ingredients li {
+    list-style: none;
+    font-size: 20px;
+    padding-left: 10px;
+}
+
+#recipe_ingredients li:before {
+    content: "-";
+    margin-right: 5px;
+}
+
+#preparation.ol {
+    padding: 0 25px;
+    text-align: justify;
+}
+
+#preparation > ol {
+    font-size: 20px;
+    list-style-position: inside;
+}
+
+#preparation h2, #recipe_ingredients h2 {
+    padding: 40px 0 30px 0;
+    font-size: 25px;
+}
